# python-coding-test

./: Makefile  README.md  pyproject.toml
src/: constants.py  database.py  main.py  models.py  pdf_service.py
src/tests/: test_api.py  test_database_client.py  test_models.py  tests.py
